css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap");

*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  /* general variables */
  --boxShadow: 0 0 5px rgb(250, 234, 230);
  --boxShadow2: 0px 0px 50px rgba(150, 150, 150, 0.3);
  --transition: all 0.3s linear;
  --transition2: all 0.5s linear;
  --border: 2px solid rgb(228, 7, 166);
  --border2: 2px solid rgb(28, 28, 192);
  --border3: 2px solid rgb(9, 224, 88);

  /* variables for this project */
  --White: hsl(0, 0%, 100%);
  --Black: hsl(0, 0%, 0%);
  --Dark-Gray: hsl(0, 0%, 55%);
  --Very-Dark-Gray: hsl(0, 0%, 41%);
}

body {
  display: grid;
  font-family: "Josefin Sans", "Alata", "Open Sans", Arial, Helvetica,
    sans-serif;
  height: 100vh;
  margin: 0;
  place-items: center;
}

li {
  cursor: pointer;
  list-style-type: none;
  margin: 1rem 0;
}

a {
  color: currentColor;
  text-decoration: none;
}

p {
  font-family: "Alata";
}

h1 {
  text-transform: uppercase;
  letter-spacing: 0.02rem;
}

img {
  object-fit: cover;
}

:is(article, .grid-contents) img {
  width: 100%;
}

.desktop-imgs {
  display: none;
}

.nav-section {
  background: url(../images/mobile/image-hero.jpg) no-repeat;
  color: var(--White);
  padding: 4rem 1rem;
  margin: 0 0 4rem;
  height: 100vh;
  position: relative;
  /* display: flex;
  flex-direction: column; */
}

.nav-logo-container {
  align-items: center;
  display: flex;
  justify-content: space-between;
  position: relative;
  z-index: 11;
}

.navbar {
  /* outline: var(--border); */
  /* position: relative; */
}

.nav-toggle {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.nav-close {
  display: none;
}

.nav-menu {
  align-items: flex-start;
  flex-direction: column;
  padding: 4rem;
  text-transform: uppercase;
  position: absolute;
  inset: 0;
  background: var(--Black);
  display: flex;
  gap: 1.5rem;
  font-size: 1.25rem;
  justify-content: center;
  transition: var(--transition);
  transform: translateX(100%);
  padding-top: 10rem;
  min-height: 30rem;
}

.lists li {
  position: relative;
}

.lists li:hover::after:not(.nav-menu.lists) {
  background-color: white;
  bottom: -0.4rem;
  content: "";
  height: 0.05rem;
  left: 50%;
  position: absolute;
  transform: translateX(-50%);
  transition: var(--transition);
  width: 2rem;
  z-index: 11;
}

.nav-menu a:hover {
  text-decoration: underline;
  text-underline-offset: 0.3rem;
}

/* for JS */
.show-navbar .nav-menu {
  transform: translateX(0);
  transition: var(--transition);
}
.show-navbar .navbar {
  padding: 4rem 0 0;
  /* background: var(--Black); */
}
.show-navbar.nav-section {
  padding: 0 1rem;
}
.show-navbar .nav-close {
  display: block;
}
.show-navbar .nav-open {
  display: none;
}

.header {
  border-radius: 1px;
  font-size: 1.3rem;
  margin: 20rem 0 10rem;
  outline: 2px solid var(--White);
  padding: 1.5rem;
  text-transform: uppercase;
}

.article {
  margin: 3rem;
  text-align: center;
}

.article h1 {
  margin: 4rem 0 1rem;
}

.article p {
  color: var(--Dark-Gray);
  line-height: 2;
  margin: 0rem 0 6rem;
}

/* grid section styles */
.grid-header {
  align-items: center;
  display: flex;
  justify-content: center;
  margin: 3rem 0;
}

.grid-header .btn {
  display: none;
}

.btn {
  background: none;
  border: none;
  outline: 1px solid var(--Dark-Gray);
  cursor: pointer;
  letter-spacing: 0.07rem;
  padding: 0.5rem 1.5rem;
  text-transform: uppercase;
  white-space: nowrap;
}

.btn:hover {
  background-color: var(--Black);
  color: var(--White);
  transition: var(--transition2);
}

.grid-content {
  color: var(--White);
  cursor: pointer;
  margin: 2rem 0;
  position: relative;
}

.grid-content h1 {
  bottom: 0;
  padding: 2rem;
  position: absolute;
  z-index: 11;
}

.grid-content:hover {
  color: var(--Very-Dark-Gray);
}

.grid-content:hover:after {
  background-color: hsla(0, 0%, 100%, 0.5);
  content: "";
  inset: 0;
  position: absolute;
}

.grid-footer {
  text-align: center;
}

/* footer styles */
.footer {
  background-color: var(--Black);
  color: var(--White);
  margin: 3rem 0;
  padding: 4rem 0;
  text-align: center;
}

.footer-logo {
  margin: 0 0 3rem;
}

.footer-lists li {
  font-family: "Alata";
  margin: 0.5rem 0 2rem;
}

.social-profiles {
  margin: 3.5rem 0 1.5rem;
}

.social-profiles img {
  cursor: pointer;
  margin: 0 0.5rem;
  position: relative;
}

.footer p {
  color: var(--Dark-Gray);
}

/* media query */
@media screen and (min-width: 50rem) {
  .all-sections > * {
    padding: 1rem 5rem;
  }

  .nav-section {
    background: url(../images/desktop/image-hero.jpg) no-repeat;
    background-size: cover;
    padding: 3rem 5rem;
  }

  .navbar {
    align-items: center;
    background: none;
    display: flex;
    justify-content: space-between;
  }

  .show-navbar .navbar {
    background: none;
  }

  .nav-toggle {
    display: none;
  }

  .nav-menu {
    align-items: center;
    background: none;
    display: flex;
    flex-direction: row;
    gap: 2rem;
    margin: 0;
    padding: 0;
    position: static;
    text-transform: capitalize;
    transform: translate(0);
    min-height: auto;
  }

  .lists li:hover::after {
    background-color: white;
    bottom: -0.4rem;
    content: "";
    height: 0.05rem;
    left: 50%;
    position: absolute;
    transform: translateX(-50%);
    transition: var(--transition);
    width: 2rem;
    z-index: 11;
  }

  .nav-menu a:hover {
    text-decoration: none;
  }

  .lists {
    position: relative;
  }

  .header {
    width: 25rem;
  }

  .grid-contents {
    display: grid;
    gap: 2rem;
    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
    margin: 3rem;
  }

  .mobile-imgs,
  .grid-footer {
    display: none;
  }

  .desktop-imgs,
  .grid-header .btn {
    display: block;
  }

  .article {
    display: flex;
    margin: 10rem 3rem;
  }

  .article img {
    width: 50%;
  }

  .article1-content {
    background-color: var(--White);
    bottom: -8rem;
    height: 20rem;
    left: -5rem;
    min-height: fit-content;
    padding: 5rem;
    position: relative;
    text-align: left;
  }

  .article h1 {
    font-size: 2rem;
    margin: 0;
  }

  .article p {
    font-size: 0.6rem;
    margin: 1.5rem 0 0;
  }

  .grid-header {
    justify-content: space-between;
    margin: 0 3rem;
  }

  .grid-content {
    margin: 0;
  }

  .footer-lists {
    display: flex;
    gap: 2rem;
    margin: 0;
  }

  .footer-lists li {
    margin: 0;
  }

  .footer {
    align-items: center;
    display: flex;
    justify-content: space-between;
    padding: 3rem;
    text-align: left;
  }

  .footer-logo {
    margin: 1rem 0;
  }

  .social-profiles {
    margin: 1.3rem 0;
    text-align: right;
  }

  .profiles > p {
    text-align: right;
  }
}

@media screen and (min-width: 60rem) {
  .all-sections > * {
    padding: 1rem 10rem;
  }

  .nav-section {
    padding-top: 4rem;
  }
}

/* my profile */
.my-profile {
  align-items: center;
  background-color: var(--Black);
  color: var(--White);
  display: flex;
  font-size: 14px;
  gap: 20px;
  justify-content: center;
  padding: 10px;
  text-align: center;
  width: 100%;
}

.my-profile > a {
  cursor: pointer;
  color: hsl(51, 79%, 45%);
  text-decoration: none;
}

.my-profile-icons a {
  cursor: pointer;
  color: var(--White);
  display: inline-block;
  margin: 0 5px;
}

@media screen and (max-width: 500px) {
  .my-profile {
    font-size: 12px;
  }

  .my-profile-icons a:first-of-type,
  .my-profile-icons a:last-of-type {
    display: none;
  }
}

